@@ -23,6 +23,7 @@ public class PookaLogManager implements ValueChangeListener {
     "Pooka.debug.gui",
     "Pooka.debug.gui.focus",
     "Pooka.debug.gui.filechooser",
+    "Pooka.debug.folderTracker",
     "Pooka.debug.logManager"
   };
   
