@@ -367,7 +367,7 @@ error.MessageWindow.replyFailed=Failed to create new Message.
 error.MessageWindow.sendDelayed=Connection unavailable.  Message saved to Outbox.
 error.Store.connectonFailed=Failed to open connection to Mail Store.
 error.Folder.disconnected=Disconnected from folder.  Please re-open.
-error.Folder.openFailed=Failed to open folder.
+error.Folder.openFailed=Failed to open folder
 error.sourceException=The underlying exception reads:  
 error.noHelpPage=No help available.
 error.trashFolder.EmptyTrashError=Error emptying Trash:
